move rest of the classes to new structure, cleanup pom.xml a little.